--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
 
-        <activity android:name=".viewmodel.MainActivity"
+        <activity android:name=".view.MainActivity"
             android:exported="true">
 
             <intent-filter>
